--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ build/
 .settings/ 
 .idea/ 
 *.class 
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
